[gd_scene load_steps=8 format=3 uid="uid://dp27yopmide5x"]

[ext_resource type="Texture2D" uid="uid://b1mtx54fjcvbv" path="res://assets/2d/ui/Build-icon.png" id="1_6i65b"]
[ext_resource type="Script" uid="uid://bb8rnalw7qr8r" path="res://common/ui/build_overlay/build_hover_panel.gd" id="1_xe8xo"]
[ext_resource type="Texture2D" uid="uid://bux2jq811o0kk" path="res://assets/2d/ui/icon-soil-20px.png" id="2_xe8xo"]
[ext_resource type="Texture2D" uid="uid://bdkms2w1ts2cr" path="res://assets/2d/ui/build_main_icons/icon-compost-bin-118px.png" id="3_y26of"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mgcg6"]
content_margin_left = 17.0
content_margin_top = 17.0
content_margin_right = 17.0
content_margin_bottom = 17.0
bg_color = Color(0.964706, 0.94902, 0.905882, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9
shadow_color = Color(0, 0, 0, 0.164706)
shadow_size = 6
shadow_offset = Vector2(6, 6)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cysu"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mtf2u"]

[node name="HoverPanel" type="PanelContainer"]
offset_right = 285.0
offset_bottom = 193.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mgcg6")
script = ExtResource("1_xe8xo")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="BuildIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("1_6i65b")
stretch_mode = 3

[node name="TitleLabel" type="Label" parent="VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/font_size = 27
text = "Compost bin"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6
theme_override_styles/separator = SubResource("StyleBoxEmpty_8cysu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/font_size = 16
text = "Compost bin"
autowrap_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_colors/font_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/font_size = 18
text = "Compost bin"
autowrap_mode = 2

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12
theme_override_styles/separator = SubResource("StyleBoxEmpty_8cysu")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="ReqIcon" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
texture = ExtResource("2_xe8xo")
stretch_mode = 3

[node name="ReqLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.384314, 0.384314, 0.384314, 1)
theme_override_font_sizes/font_size = 15
text = "Soil 2/2"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/separator = SubResource("StyleBoxEmpty_mtf2u")

[node name="IconTextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(118, 118)
layout_mode = 2
texture = ExtResource("3_y26of")
stretch_mode = 3
